비밀번호 디자인 수정

--- a/detail.html
+++ b/detail.html
@@ -25,6 +25,11 @@
       margin: 0;
     }
 
+    .pass {
+        text-align: center;
+        color: #000;
+    }
+
     .header {
       padding-top: 40px;
       padding-left: 3px;
@@ -305,7 +310,7 @@
                                         target="_blank">https://blog.naver.com/kangbaekho10s</a></p>
           <hr>
           <div class="update">
-            <input type="password" placeholder="비밀번호를 입력해주세요" id="password">
+            <input class="pass" type="password" placeholder="비밀번호" id="password">
             <button type="button" class="btn btn-danger" id="update">수정하기</button>
           </div>
         </div>
@@ -388,4 +393,3 @@
 </body>
 
 </html>
-
