--- a/index.html
+++ b/index.html
@@ -46,15 +46,14 @@
       }
   
       #myCarousel {
-        width: 80%;
+        width: 1330px;
         height: 512px;
-        margin-top: 40px;
-        margin-bottom: 60px;
+        margin-top: 45px;
+        margin-bottom: 40px;
         margin-left: auto;
         margin-right: auto;
         justify-content: center;
         align-items: center;
-        background-color: #000000;
       }
   
       .carousel-caption {
@@ -97,6 +96,10 @@
         background-color: black;
       }
   
+      .carousel-inner {
+        border-radius: 5px;
+      }
+
       .fw-normal {
         margin-top: 2rem;
       }
@@ -284,7 +287,7 @@
               preserveAspectRatio="xMidYMid slice"
               focusable="false"
             >
-              <rect width="100%" height="100%" fill="#F51616"></rect>
+              <rect width="100%" height="100%" fill="#5939F9"></rect>
             </svg>
             <div class="container">
               <div class="carousel-caption text-start">
@@ -307,7 +310,7 @@
               preserveAspectRatio="xMidYMid slice"
               focusable="false"
             >
-              <rect width="100%" height="100%" fill="#F0F831"></rect>
+              <rect width="100%" height="100%" fill="#836BFB"></rect>
             </svg>
             <div class="container">
               <div class="carousel-caption">
@@ -330,7 +333,7 @@
               preserveAspectRatio="xMidYMid slice"
               focusable="false"
             >
-              <rect width="100%" height="100%" fill="#4031F8"></rect>
+              <rect width="100%" height="100%" fill="#B4A5FC"></rect>
             </svg>
             <div class="container">
               <div class="carousel-caption text-end">
