--- a/index.html
+++ b/index.html
@@ -96,6 +96,10 @@
         background-color: black;
       }
 
+      .carousel-inner {
+        border-radius: 5px;
+      }
+
       .fw-normal {
         margin-top: 2rem;
       }
