--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
       .row {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
         justify-items: center;
       }
 
@@ -85,6 +85,10 @@
         padding: 2rem 0.5rem;
         margin: 10px;
         width: 80%;
+      }
+
+      .col-lg-3 > img {
+        border-radius: 50%;
       }
 
       .bar {
