--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     ></script>
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
-
+  
       body {
         margin: 0;
       }
-
+  
       .header {
         padding-top: 40px;
         padding-left: 3px;
@@ -32,19 +32,19 @@
         justify-content: center;
         display: flex;
       }
-
-      .header > div {
+  
+      .header>div {
         color: #000000;
         font-family: "Newsreader", serif;
         font-size: 3rem;
       }
-
+  
       .main {
         display: flex;
         flex-direction: column;
         position: relative;
       }
-
+  
       #myCarousel {
         width: 1330px;
         height: 512px;
@@ -55,28 +55,28 @@
         justify-content: center;
         align-items: center;
       }
-
+  
       .carousel-caption {
         top: 1.5rem;
         text-align: center !important;
       }
-
-      .carousel-caption > h1 {
+  
+      .carousel-caption>h1 {
         margin-bottom: 3rem;
       }
-
+  
       #rows-container {
         display: flex;
         justify-content: center;
         width: 70vw;
       }
-
+  
       .row {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr 1fr;
         justify-items: center;
       }
-
+  
       .col-lg-3 {
         text-align: center;
         border-style: solid;
@@ -86,11 +86,7 @@
         margin: 10px;
         width: 90%;
       }
-
-      .col-lg-3 > img {
-        border-radius: 50%;
-      }
-
+  
       .bar {
         width: 210px;
         height: 5px;
@@ -99,9 +95,9 @@
         margin-bottom: 0px;
         background-color: black;
       }
-
+  
       .carousel-inner {
-        border-radius: 5px;
+        border-radius: 10px;
       }
 
       .fw-normal {
@@ -123,16 +119,16 @@
         addDoc,
       } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
-      function make_card(name, image, uid) {
+      function make_card(name, image, count, uid) {
         return `<div class="col-lg-3">
             <img height=140 width= 140 src="${image}" alt="...">
-            <h2 class="fw-normal">${name}</h2>
+            <h2 class="fw-normal" id="card-${count}">${name}</h2>
             <p>
               And lastly this, the third column of representative placeholder
               content.
             </p>
             <p>
-              <a class="btn btn-secondary detail-btn">View details »</a>
+              <a class="btn btn-secondary" id="detail-btn-${count}">View details »</a>
             </p>
             <p class="uid">${uid}</p>
           </div>`;
@@ -154,13 +150,13 @@
 
       const querySnapshot = await getDocs(collection(db, "cards"));
       const card_rows = $("#card-rows");
-      querySnapshot.forEach((doc) => {
+      querySnapshot.forEach((doc, i) => {
         const { name, image } = doc.data();
-        const temp_html = make_card(name, image, doc.id);
+        const temp_html = make_card(name, image, i, doc.id);
         card_rows.append(temp_html);
       });
 
-      let detail_btn_click = (uid) => () => {
+      let detail_btn_click = (uid)=> () => {
         let current_href = window.location.href;
         if (current_href.split("/").slice(-1)[0].includes("html")) {
           window.location =
@@ -170,16 +166,14 @@
         } else {
           window.location = current_href + "detail.html?uid=" + uid;
         }
-      };
+      }
 
-      Array.from(card_rows.children()).forEach((card) => {
+      Array.from(card_rows.children()).forEach((card, i) => {
         let uid = card.getElementsByClassName("uid");
-        let detail_button = card.getElementsByClassName("detail-btn")[0];
+        if (i == 0) return
         // onclick은 parameter를 넘겨줄 수 없어서 커링으로 일단 인자를 받도록 함
-        detail_button.onclick = detail_btn_click(
-          card.getElementsByClassName("uid")[0].textContent
-        );
-      });
+        card.onclick=detail_btn_click(card.getElementsByClassName("uid")[0].textContent);
+      })
 
       const add_card_form = `<div class="col-lg-3">
             <svg
@@ -223,22 +217,14 @@
         const image = document.querySelector("input[id=image]").value;
         const password = document.querySelector("input[id=pwd]").value;
 
-        const doc = {
-          name,
-          mbti,
-          strength,
-          style,
-          blog,
-          image,
-          password,
-          isMember: false,
-        };
+
+        const doc = { name, mbti, strength, style, blog, image, password, isMember:false };
 
         const docref = await addDoc(collection(db, "cards"), doc);
         let card_rows = $("#card-rows");
         const cards_cnt = card_rows.children().length;
-
-        let temp_html = make_card(name, image, docref.id);
+        
+        let temp_html = make_card(name, image, cards_cnt);
 
         card_rows.children().last().remove();
         card_rows.append(temp_html);
@@ -381,124 +367,265 @@
         </button>
       </div>
       <div class="container" id="rows-container">
-        <div class="row" id="card-rows"></div>
-      </div>
-      <div
-        class="modal fade"
-        id="addModal"
-        tabindex="-1"
-        aria-labelledby="addModalLabel"
-        aria-hidden="true"
-      >
-        <div class="modal-dialog modal-dialog-centered">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h1 class="modal-title fs-5" id="exampleModalLabel">
-                새 멤버 추가
-              </h1>
+        <div class="row" id="card-rows">
+          <!-- <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal" id="card-1">김태완</h2>
+            <p>
+              Some representative placeholder content for the three columns of
+              text below the carousel. This is the first column.
+            </p>
+            <p>
+              <a class="btn btn-secondary" id="detail-btn-1">View details »</a>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal" id="card-2">오지석</h2>
+            <p>
+              Another exciting bit of representative placeholder content. This
+              time, we've moved on to the second column.
+            </p>
+            <p>
+              <a class="btn btn-secondary" id="detail-btn-2">View details »</a>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal" id="card-3">김도균</h2>
+            <p>
+              And lastly this, the third column of representative placeholder
+              content.
+            </p>
+            <p>
+              <a class="btn btn-secondary" id="detail-btn-3">View details »</a>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal" id="card-4">이수진</h2>
+            <p>
+              And lastly this, the third column of representative placeholder
+              content.
+            </p>
+            <p>
+              <a class="btn btn-secondary" id="detail-btn-4">View details »</a>
+            </p>
+          </div>
+          <div class="col-lg-3">
+            <svg
+              class="bd-placeholder-img rounded-circle"
+              width="140"
+              height="140"
+              xmlns="http://www.w3.org/2000/svg"
+              role="img"
+              aria-label="Placeholder"
+              preserveAspectRatio="xMidYMid slice"
+              focusable="false"
+            >
+              <title>Placeholder</title>
+              <rect
+                width="100%"
+                height="100%"
+                fill="var(--bs-secondary-color)"
+              ></rect>
+            </svg>
+            <h2 class="fw-normal" id="card-5">추가</h2>
+            <p>새 멤버를 추가하세요.</p>
+            <p>
               <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <div class="input-group mb-3">
-                <span class="input-group-text">이름</span>
-                <input
-                  id="name"
-                  type="text"
-                  class="form-control"
-                  aria-label="name"
-                  aria-describedby="name"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">MBTI</span>
-                <input
-                  id="mbti"
-                  type="text"
-                  class="form-control"
-                  aria-label="mbti"
-                  aria-describedby="mbti"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">장점</span>
-                <input
-                  id="strength"
-                  type="text"
-                  class="form-control"
-                  aria-label="strength"
-                  aria-describedby="strength"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">스타일</span>
-                <input
-                  id="style"
-                  type="text"
-                  class="form-control"
-                  aria-label="style"
-                  aria-describedby="style"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">블로그 주소</span>
-                <input
-                  id="blog"
-                  type="text"
-                  class="form-control"
-                  aria-label="blog"
-                  aria-describedby="blog"
-                />
-              </div>
-
-              <div class="input-group mb-3">
-                <span class="input-group-text">이미지 주소</span>
-                <input
-                  id="image"
-                  type="text"
-                  class="form-control"
-                  aria-label="image"
-                  aria-describedby="image"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">비밀번호</span>
-                <input
-                  id="pwd"
-                  type="password"
-                  class="form-control"
-                  aria-label="pwd"
-                  aria-describedby="pwd"
-                />
-              </div>
-              <div class="input-group mb-3">
-                <span class="input-group-text">비밀번호 확인</span>
-                <input
-                  id="pwdCheck"
-                  type="password"
-                  class="form-control"
-                  aria-label="pwdCheck"
-                  aria-describedby="pwdCheck"
-                />
-              </div>
-            </div>
-            <div class="modal-footer">
-              <button
-                type="button"
                 class="btn btn-secondary"
-                data-bs-dismiss="modal"
-                id="close-btn"
+                data-bs-toggle="modal"
+                data-bs-target="#addModal"
               >
-                닫기
+                멤버 추가하기 »
               </button>
-              <button type="button" class="btn btn-primary" id="add-btn">
-                추가하기
-              </button>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+  -->
+     <div
+      class="modal fade"
+      id="addModal"
+      tabindex="-1"
+      aria-labelledby="addModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              새 멤버 추가
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <div class="input-group mb-3">
+              <span class="input-group-text">이름</span>
+              <input
+                id="name"
+                type="text"
+                class="form-control"
+                aria-label="name"
+                aria-describedby="name"
+              />
             </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text">MBTI</span>
+              <input
+                id="mbti"
+                type="text"
+                class="form-control"
+                aria-label="mbti"
+                aria-describedby="mbti"
+              />
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text">장점</span>
+              <input
+                id="strength"
+                type="text"
+                class="form-control"
+                aria-label="strength"
+                aria-describedby="strength"
+              />
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text">스타일</span>
+              <input
+                id="style"
+                type="text"
+                class="form-control"
+                aria-label="style"
+                aria-describedby="style"
+              />
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text">블로그 주소</span>
+              <input
+                id="blog"
+                type="text"
+                class="form-control"
+                aria-label="blog"
+                aria-describedby="blog"
+              />
+            </div>
+
+            <div class="input-group mb-3">
+              <span class="input-group-text">이미지 주소</span>
+              <input
+                id="image"
+                type="text"
+                class="form-control"
+                aria-label="image"
+                aria-describedby="image"
+              />
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text">비밀번호</span>
+              <input
+                id="pwd"
+                type="password"
+                class="form-control"
+                aria-label="pwd"
+                aria-describedby="pwd"
+              />
+            </div>
+            <div class="input-group mb-3">
+              <span class="input-group-text">비밀번호 확인</span>
+              <input
+                id="pwdCheck"
+                type="password"
+                class="form-control"
+                aria-label="pwdCheck"
+                aria-describedby="pwdCheck"
+              />
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+              id="close-btn"
+            >
+              닫기
+            </button>
+            <button type="button" class="btn btn-primary" id="add-btn">
+              추가하기
+            </button>
           </div>
         </div>
       </div>
