홈으로 돌아가는 기능 추가

--- a/detail.html
+++ b/detail.html
@@ -331,6 +331,14 @@
         updateModal.css("pointer-events", "none")
       }
     })
+
+    document.querySelector(".header > div").onclick = () => {
+      if (window.location.pathname.split("/").slice(-1)[0].includes("html")) {
+        window.location.href = window.location.origin + window.location.pathname.split("/").slice(0,-1).join("/")
+      } else {
+        window.location.href = window.location.origin
+      }
+    };
   </script>
 </head>
 
