--- a/index.html
+++ b/index.html
@@ -264,6 +264,10 @@
       }
 
       document.querySelector("#add-btn").onclick = validation;
+
+      document.querySelector(".header > div").onclick = () => {
+        window.location.reload();
+      };
     </script>
   </head>
   <body>
