--- a/detail.html
+++ b/detail.html
@@ -6,18 +6,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>INT's</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-          integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
-    const myCarouselElement = document.querySelector('#myCarousel')
+    integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous">
+      const myCarouselElement = document.querySelector('#myCarousel')
 
-    const carousel = new bootstrap.Carousel(myCarouselElement, {
-      interval: 2000,
-      touch: false
-    })
-  </script>
+      const carousel = new bootstrap.Carousel(myCarouselElement, {
+        interval: 2000,
+        touch: false
+      })
+    </script>
   <style>
     @import url("https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap");
 
@@ -126,9 +126,15 @@
       margin-bottom: 20px;
       background-color: black;
     }
-    .update-modal{
+
+    .weather {
+      width: 50px;
+      height: 50px;
+    }
+
+    .update-modal {
       width: 1300px;
-      margin:0 auto;
+      margin: 0 auto;
       box-shadow: 0 0 10px 0 gray;
       background-color: rgb(250, 247, 198);
       transition: all 1s;
@@ -138,16 +144,18 @@
       z-index: 1;
     }
 
-    .update-modal-content hr{
+    .update-modal-content hr {
       width: 1100px;
     }
 
-    input, h5 input, p input{
+    input,
+    h5 input,
+    p input {
       border: none;
       background-color: rgb(250, 247, 198);
     }
 
-    .update-modal-content-button{
+    .update-modal-content-button {
       display: flex;
       align-items: end;
       justify-content: end;
@@ -155,11 +163,9 @@
 
     }
 
-    .update-modal-content-button button{
+    .update-modal-content-button button {}
 
-    }
-
-    .grid-container{
+    .grid-container {
       display: grid;
       grid-template-columns: 1fr;
       grid-template-rows: auto auto;
@@ -170,7 +176,7 @@
       grid-row: 1;
     }
 
-    .update input{
+    .update input {
       margin-right: 20px;
       height: 35px;
     }
@@ -207,7 +213,7 @@
 
     //  홈페이지 접속 시 데이터 보이기
     const q = query(collection(db, "cards"), where("__name__", "==", `${params}`));
-    console.log(collection(db,"cards"))
+    console.log(collection(db, "cards"))
     // let image = $('#image').val()
     // let title = $('#title').val()
     // let content = $('#content').val()
@@ -223,7 +229,7 @@
     let data = await getDocs(q);
     data.forEach((doc) => {
       console.log(doc.data())
-      let data =doc.data()
+      let data = doc.data()
       let tempHtml = ` <div class="card mb-3 detail" >
                        <div class="row g-0">
                             <div class="col-md-4">
@@ -286,11 +292,11 @@
     let updateModal = $("#update_modal")
 
     //모달 띄우기 & 닫기
-    $("#update").click(async function (){
-      if(!$("#password").val()) {
+    $("#update").click(async function () {
+      if (!$("#password").val()) {
         alert("비밀번호를 입력해주세요")
-      }else{
-        try{
+      } else {
+        try {
           let data = await getDocs(q);
           let pw = ""
           data.forEach((doc) => {
@@ -313,7 +319,7 @@
             }
           }
 
-        }catch (error){
+        } catch (error) {
           console.error(error)
         }
       }
@@ -321,11 +327,11 @@
     })
 
     //저장 & 모달 닫기
-    $("#save").click(async function (){
-      if(isModal === false){
+    $("#save").click(async function () {
+      if (isModal === false) {
         isModal = true
         $("#update_modal").css("opacity", 1)
-      }else{
+      } else {
         isModal = false
         $("#update_modal").css("opacity", 0)
         updateModal.css("pointer-events", "none")
@@ -342,67 +348,74 @@
         window.location.href = window.location.origin;
       }
     };
+
+    $(document).ready(function () {
+      let url = "http://spartacodingclub.shop/sparta_api/weather/seoul";
+      fetch(url).then(res => res.json()).then(data => {
+        let temp = data['icon'];
+        jQuery('#msg').attr("src", temp);
+      })
+    })
+
   </script>
 </head>
 
 <body>
-<div class="header">
-  <div>INT's</div>
-</div>
-<div class="bar"></div>
-<div class="main grid-container" >
-  <div class="main grid-container" id="detail_page">
-
+  <div class="header">
+    <div>INT's</div>
+    <div class="weather">
+      <img id="msg" src="">
+    </div>
   </div>
-  <div class="container" id="rows-container">
-    <div class="row" style="width: 1500px">
-      <div class="col-lg-3">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-             preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-        </svg>
-        <h2 class="fw-normal">김태완</h2>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-      </div>
-      <!-- /.col-lg-3 -->
-      <div class="col-lg-3">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-             preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-        </svg>
-        <h2 class="fw-normal">오지석</h2>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-      </div>
-      <!-- /.col-lg-3 -->
-      <div class="col-lg-3">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-             preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-        </svg>
-        <h2 class="fw-normal">김도균</h2>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
-      </div>
-      <!-- /.col-lg-3 -->
-      <div class="col-lg-3">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140"
-             xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder"
-             preserveAspectRatio="xMidYMid slice" focusable="false">
-          <title>Placeholder</title>
-          <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
-        </svg>
-        <h2 class="fw-normal">이수진</h2>
-        <p><a class="btn btn-secondary" href="#">View details »</a></p>
+  <div class="bar"></div>
+  <div class="main grid-container">
+    <div class="main grid-container" id="detail_page">
+
+    </div>
+    <div class="container" id="rows-container">
+      <div class="row" style="width: 1500px">
+        <div class="col-lg-3">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+          </svg>
+          <h2 class="fw-normal">김태완</h2>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+          </svg>
+          <h2 class="fw-normal">오지석</h2>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+          </svg>
+          <h2 class="fw-normal">김도균</h2>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div>
+        <!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg"
+            role="img" aria-label="Placeholder" preserveAspectRatio="xMidYMid slice" focusable="false">
+            <title>Placeholder</title>
+            <rect width="100%" height="100%" fill="var(--bs-secondary-color)"></rect>
+          </svg>
+          <h2 class="fw-normal">이수진</h2>
+          <p><a class="btn btn-secondary" href="#">View details »</a></p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 </body>
 
 </html>
-
