--- a/detail.html
+++ b/detail.html
@@ -177,6 +177,15 @@
       margin-right: 20px;
       height: 35px;
     }
+
+    #weatherContainer {
+      position: absolute;
+      right: 10rem;
+    }
+
+    #weather {
+      font-size: medium;
+    }
   </style>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
@@ -395,12 +404,35 @@
     card_rows.children().click(detail_btn_click(newUid));
 
 
+    //날씨 API
+    navigator.geolocation.getCurrentPosition((position) => {
+
+const lat = position.coords.latitude;
+const lon = position.coords.longitude;
+const apiKey = '9dc6fb05dead7932a8b331bf4b8a150b';
+
+fetch(`https://api.openweathermap.org/data/2.5/weather?lat=${lat}&lon=${lon}&appid=${apiKey}&units=metric&lang=kr`)
+.then(res => res.json())
+.then(data => {
+  const temp = data['main']['temp'].toFixed(1);
+  const icon = data['weather'][0]['icon']
+  const iconUrl = `http://openweathermap.org/img/wn/${icon}@2x.png`;
+
+  $('#temp').text(temp);
+  $('#weatherIcon').attr('src', iconUrl);
+})
+});
   </script>
 </head>
 
 <body>
 <div class="header">
   <div>INT's</div>
+  <div id="weatherContainer">
+    <div id="weather">
+      현재 날씨 : <span id="temp"></span>°C <img id="weatherIcon" src="">
+    </div>
+  </div>
 </div>
 <div class="bar"></div>
 <div class="main grid-container" >
