--- a/detail.html
+++ b/detail.html
@@ -197,7 +197,8 @@
       query,
       where,
       updateDoc,
-      doc
+      doc,
+      orderBy
     } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
     let current_href = window.location.href;
     let href = current_href.split("/").slice(-1)[0]
@@ -366,7 +367,7 @@
     })
 
     function make_card(name, image, uid) {
-      return `<div class="col-lg-3">
+      return `<div class="col-lg-3" style="margin-top: 20px">
             <img height=140 width= 140 src="${image}" alt="...">
             <h2 class="fw-normal">${name}</h2>
             <p>
@@ -376,8 +377,8 @@
           </div>`;
     }
     //아래 카드 보여주기
-    const querySnapshot = await getDocs(
-      query(collection(db, "cards"))
+  const querySnapshot = await getDocs(
+      query(collection(db, "cards"), orderBy("creationTimestamp"))
     );
 
     let newUid = ""
