--- a/detail.html
+++ b/detail.html
@@ -186,6 +186,10 @@
     #weather {
       font-size: medium;
     }
+
+    .col-lg-3>img {
+      border-radius: 50%;
+    }
   </style>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
