--- a/detail.html
+++ b/detail.html
@@ -199,6 +199,10 @@
     .col-lg-3>img {
       border-radius: 50%;
     }
+
+    .card-text{
+      width: 500px;
+    }
   </style>
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js";
