--- a/index.html
+++ b/index.html
@@ -208,12 +208,10 @@
       };
 
       Array.from(card_rows.children()).forEach((card) => {
-        let uid = card.getElementsByClassName("uid");
+        let uid = card.getElementsByClassName("uid")[0].textContent;
         let detail_button = card.getElementsByClassName("detail-btn")[0];
         // onclick은 parameter를 넘겨줄 수 없어서 커링으로 일단 인자를 받도록 함
-        detail_button.onclick = detail_btn_click(
-          card.getElementsByClassName("uid")[0].textContent
-        );
+        detail_button.onclick = detail_btn_click(uid);
       });
 
       const add_card_form = `<div class="col-lg-3">
